--- a/src/App.css
+++ b/src/App.css
@@ -20,13 +20,18 @@ button:focus {
 }
 
 .App-header {
-  background-image: linear-gradient(to right, #fc00ff 0%, #00dbde 51%, #fc00ff 100%);
+  background-image: linear-gradient(
+    to right,
+    #fc00ff 0%,
+    #00dbde 51%,
+    #fc00ff 100%
+  );
   height: 70px;
   padding: 10px;
   font-weight: 900;
   font-size: 30px;
   color: white;
-  font-family: 'Verdana';
+  font-family: "Verdana";
   text-align: center;
 
   animation-name: header-animation;
@@ -34,29 +39,32 @@ button:focus {
   animation-iteration-count: infinite;
 }
 
-
-
 .App-title {
   font-size: 1.5em;
 }
 
 .recipe_buttons {
-  border: solid 2px #e74c3c;
+  border: solid 3px #e74c3c;
   background: transparent;
   padding: 0.4rem 0.6rem;
   margin: 0 0.2rem;
   border-radius: 1px;
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 700;
   margin-left: 0.7rem;
+
+  moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 .recipes__box {
   background: #fff;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   border-radius: 5px;
-  box-shadow: -1px 2px 34px -13px rgba(0,0,0,0.75);
+  box-shadow: -1px 2px 34px -13px rgba(0, 0, 0, 0.75);
   text-align: left;
   overflow: hidden;
 }
@@ -108,7 +116,7 @@ button:focus {
   margin-left: 0.7rem;
 }
 
-input[type="text"] { 
+input[type="text"] {
   outline: none;
 }
 
@@ -134,7 +142,8 @@ input:-webkit-autofill {
   margin: 1rem 0;
 }
 
-.active-recipe__publisher, .active-recipe__website {
+.active-recipe__publisher,
+.active-recipe__website {
   text-transform: uppercase;
   font-size: 1.2rem;
   margin-bottom: 1rem;
