--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ button:focus {
 
 .recipes__box {
   background: #fff;
-  padding-bottom: 1rem;
+  padding: 1rem;
   border-radius: 5px;
   box-shadow: -1px 2px 34px -13px rgba(0, 0, 0, 0.75);
   text-align: left;
