--- a/src/components/custom-css/Recipes.css
+++ b/src/components/custom-css/Recipes.css
@@ -1,10 +1,6 @@
 .recipes-container {
-	background-image: linear-gradient(
-		to right,
-		#fc00ff 0%,
-		#00dbde 51%,
-		#fc00ff 100%
-	);
+	color: #435757;
+	background: linear-gradient(-20deg, #d0b782 20%, #a0cecf 80%);
 }
 
 .recipe_buttons:hover {
