--- a/src/components/custom-css/Footer.css
+++ b/src/components/custom-css/Footer.css
@@ -1,11 +1,10 @@
 .footer-container {
   display: block;
   padding-top: 20px;
-  height: 60px;
   width: 100%;
   background-color: #323232;
   background-image: #323232;
-  height: 300px;
+  padding-right: 1rem;
   padding-left: 1rem;
   margin-bottom: 2rem;
   font-weight: 900;
@@ -19,4 +18,5 @@
 .tribute{
   padding-top: 10%;
   width: 100%;
+  text-align: right;
 }
