changed layout and banner

--- a/src/components/custom-css/Banner.css
+++ b/src/components/custom-css/Banner.css
@@ -4,7 +4,7 @@
   height: 30%;
   background-image: linear-gradient(to right, #614385 0%, #516395 51%, #614385 100%);
   font-weight: 400;
-  padding-left: 6rem;
+  padding-left: 2%;
   font-size: 20px;
   color: white;
   font-family: 'Verdana';
